move lab 4 fix 062

--- a/materials/Day6/062_osm_data.ipynb
+++ b/materials/Day6/062_osm_data.ipynb
@@ -478,7 +478,9 @@
   {
    "cell_type": "markdown",
    "id": "f43e7215-7704-4f87-adfb-e96f1213f748",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## On your own\n",
     "<hr style=\"border-top: 0.2px solid gray; margin-top: 12px; margin-bottom: 1px\"></hr>\n",
@@ -554,154 +556,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5feeff39-1eae-4f58-bdc5-63e28430acd3",
+   "id": "e82b9cd3-ddf4-4c2b-a9ac-8e8813b0151f",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Mixing OSM, Census Data, and Gridded Population Data\n",
-    "<hr style=\"border-top: 0.2px solid gray; margin-top: 12px; margin-bottom: 1px\"></hr>\n",
-    "\n",
-    "<img src=\"./assets/WP.png\" alt=\"Worldpop work flow\" width=\"1000\"/>\n",
-    "\n",
-    "For the rest of the tutorial, we are going to integrate OSM, Census, and gridded population data from [WorldPop](https://www.worldpop.org/methods/). To remind you, gridded population datasets are created by estimate the relationships between remote-sensed (RS) data and other GIS data with census data, and then using the RS to predict population at fine spatial resolutions. The spatial weights can be built using a top-down or a bottom-up approach. The top-down approach uses large-area census data and then allocates population to areas where we think people live from RS data. The bottom-up approach uses micro-census data to develop spatial covariates to allocate population in areas where we lack information. Both are very powerful, but both will create uncertainty in population estimates.  \n",
-    "\n",
-    "Let's dive into Worldpop's 2020 100m spatial resolution population data for the United States and see what it looks like for Montana. Note that we'll be using a new package called [rioxarray](https://corteva.github.io/rioxarray/) which is a wrapper that combines functionality of `rasterio` with `xarray`, a package we will use a lot in the coming weeks. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c8c14a82-fe87-45a5-a9c2-c891da2db2c5",
-   "metadata": {},
-   "source": [
-    "<div class=\"run\">\n",
-    "    ▶️ <b> Run the cells below. </b>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b6bf1b68-a1e5-4803-922e-fb8f35cc4a4c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Dependencies \n",
-    "import rioxarray as rio\n",
-    "import os\n",
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0556178a-cfbe-4437-a0ce-e17d4045e300",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Open WorldPop 2020 100m Data for the USA\n",
-    "fn = os.path.join('./data/usa_ppp_2020_constrained.tif')\n",
-    "wp2020 = rio.open_rasterio(fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "04c20ad5-6da4-4b67-8b38-a57621145956",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What kind of object is wp2020? <class 'xarray.core.dataarray.DataArray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check out the type and look at the xarray.DataArrayObject\n",
-    "print('What kind of object is wp2020?', type(wp2020))"
+    "### Last Task:\n",
+    "Try plotting all the local roads in one color, all the major highways in another color, and the buildings in a third color"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ec8eb1d-fbd3-481f-9c21-aa227ebe1c60",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "wp2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a90e8777-a5ed-480d-99fd-9e6692d3eee7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Let's use the sys package to look at the size of the WP data\n",
-    "sys.getsizeof(wp2020.read(1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d527d5a-da39-4e81-8061-5ff10857a28b",
+   "id": "905da607-ea8f-484f-a3e5-90998af540fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b13e533-856c-4c84-b754-289e50f643fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clip it to Montana"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85b4c832-6682-45a1-a3cb-7d58092afda9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compare it to Census Data County Level"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "428423a3-e358-4cc5-bcf3-4e7a508d0ccf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Buffer Road by 500 m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddc9c68b-12be-48d1-a2b8-02bfd46f07d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# "
+    "# Your code here"
    ]
   }
  ],
