--- a/materials/Day7/old_nb/Step2_Clip.ipynb
+++ b/materials/Day7/old_nb/Step2_Clip.ipynb
@@ -7,7 +7,8 @@
     "# Clip\n",
     "\n",
     "By Cascade Tuholske, Sep 2020 <br>\n",
-    "Notebook to clip rasters. <br>"
+    "Notebook to clip rasters. <br>\n",
+    "**NOTE** Needs to be run for all geographies: Nepal gdam 0, M-M-Z0.shp, and ECU-clip0.shp"
    ]
   },
   {
@@ -35,7 +36,7 @@
    "outputs": [],
    "source": [
     "#### File Paths & FNs\n",
-    "data_path = os.path.join() # 'Path/to/PopGridCompare/data/'"
+    "DATA_PATH = '/Users/cascade/Github/PopGridCompare/data/'"
    ]
   },
   {
@@ -98,14 +99,145 @@
     "rst_fns\n",
     "\n",
     "# Open polys\n",
-    "polys_fn = os.path.join('') # path/to/country/shape/file\n",
+    "country = '_NPL.tif'#'_ECU.tif'#'_MMZ.tif'#'_NPL.tif'\n",
+    "polys_fn = DATA_PATH+ 'raw/GPWv4-boundaries/gwpv4_npl_admin4.shp'#'interim/ECU-clip0.shp' #'interim/M-M-Z-0.shp'\n",
     "polys = gpd.read_file(polys_fn)\n",
-    "shapes = polys['geometry']\n",
+    "shapes = polys[\"geometry\"]\n",
     "\n",
     "in_ext = '_matched.tif'\n",
     "out_ext = '_all'+country\n",
     "for rst_fn in rst_fns:\n",
     "    raster_clip(rst_fn, shapes, in_ext, out_ext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/cascade/Github/PopGridCompare/data/interim/GHS15_urban_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/GPWv4_urban_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/ESRI16_urban_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/WP16_urban_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/LS15_urban_NPL.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Urban Rasters \n",
+    "rst_fns = glob.glob('/Users/cascade/Github/PopGridCompare/data/interim/*_urban.tif')\n",
+    "rst_fns\n",
+    "\n",
+    "in_ext = 'matched_urban.tif'\n",
+    "out_ext = 'urban'+country\n",
+    "for rst_fn in rst_fns:\n",
+    "    raster_clip(rst_fn, shapes, in_ext, out_ext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/cascade/Github/PopGridCompare/data/interim/LS15_rural_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/WP16_rural_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/GPWv4_rural_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/ESRI16_rural_NPL.tif\n",
+      "/Users/cascade/Github/PopGridCompare/data/interim/GHS15_rural_NPL.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Rural Rasters \n",
+    "rst_fns = glob.glob('/Users/cascade/Github/PopGridCompare/data/interim/*_rural.tif')\n",
+    "rst_fns\n",
+    "\n",
+    "in_ext = 'matched_rural.tif'\n",
+    "out_ext = 'rural'+country\n",
+    "for rst_fn in rst_fns:\n",
+    "    raster_clip(rst_fn, shapes, in_ext, out_ext)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MGUP\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def raster_clip(rst_fn, polys, fn_out):\n",
+    "    \n",
+    "    \"\"\" function clips a raster and saves it out\n",
+    "    args:\n",
+    "        rst_fn = raster you want to clip\n",
+    "        poly = polys you want to clip to\n",
+    "        fn_out = fn to write out\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    # clip raster\n",
+    "    with rasterio.open(rst_fn) as src:\n",
+    "        out_image, out_transform = rasterio.mask.mask(src, polys, crop=True)\n",
+    "        out_meta = src.meta\n",
+    "        \n",
+    "    # Update meta data\n",
+    "    out_meta.update({\"driver\": \"GTiff\",\n",
+    "                 \"height\": out_image.shape[1],\n",
+    "                 \"width\": out_image.shape[2],\n",
+    "                 \"transform\": out_transform})\n",
+    "    \n",
+    "    # write image \n",
+    "    with rasterio.open(fn_out, \"w\", **out_meta) as dest:\n",
+    "        dest.write(out_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### MGUP\n",
+    "rst_fn = DATA_PATH+'interim/MGUP15_2015-km-matched.tif'\n",
+    "\n",
+    "#'interim/ECU-clip0.shp' #'interim/M-M-Z-0.shp'\n",
+    "\n",
+    "# Nepal \n",
+    "polys_fn = DATA_PATH+'raw/GDAM/gadm36_NPL_shp/gadm36_NPL_0.shp'\n",
+    "fn_out = DATA_PATH+'interim/MGUP15_2015-km-matched-NPL.tif'\n",
+    "polys = gpd.read_file(polys_fn)\n",
+    "shapes = polys[\"geometry\"]\n",
+    "raster_clip(rst_fn, shapes, fn_out)\n",
+    "\n",
+    "# MMZ \n",
+    "polys = DATA_PATH+'interim/M-M-Z-0.shp'\n",
+    "fn_out = DATA_PATH+'interim/MGUP15_2015-km-matched-MMZ.tif'\n",
+    "polys = gpd.read_file(polys_fn)\n",
+    "shapes = polys[\"geometry\"]\n",
+    "raster_clip(rst_fn, shapes, fn_out)\n",
+    "\n",
+    "# ECU \n",
+    "polys_fn = DATA_PATH+'interim/ECU-clip0.shp'\n",
+    "fn_out = DATA_PATH+'interim/MGUP15_2015-km-matched-ECU.tif'\n",
+    "polys = gpd.read_file(polys_fn)\n",
+    "shapes = polys[\"geometry\"]\n",
+    "raster_clip(rst_fn, shapes, fn_out)"
    ]
   }
  ],
