key3 done lab 4 paths correct

--- a/materials/Day8/08_07_dask_xarray.ipynb
+++ b/materials/Day8/08_07_dask_xarray.ipynb
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "# Get the path to your files in a list files\n",
-    "path = os.path.join('/home/t61d992/grp-ct/data/raw/climate/CHC_CMIP6/Observation/himax/2016/')\n",
+    "path = os.path.join('/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day8/data/2016/')\n",
     "fns = sorted(glob.glob(path + '*.tif'))\n",
     "\n",
     "# print first five files to make sure they are in order\n",
@@ -154,18 +154,6 @@
     "plt.imshow(arr, vmin = -32)\n",
     "plt.colorbar(shrink = 0.4)\n",
     "plt.title('Maximum Heat Index in °C for July 1, 2016');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "540f38dc-6f1d-4819-b127-840ba3033469",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "arr[arr != -9999]"
    ]
   },
   {
@@ -237,7 +225,7 @@
     "for fn in fns:\n",
     "    \n",
     "    # Get the date\n",
-    "    date = fn.split('himax/2016/')[1].split('.tif')[0]\n",
+    "    date = fn.split('data/2016/')[1].split('.tif')[0]\n",
     "    \n",
     "    # open the array in c\n",
     "    arr_c = rasterio.open(fn).read(1)\n",
@@ -301,20 +289,20 @@
     "    # print(multiprocessing.current_process())  # for now, we'll leave this commented out\n",
     "    \n",
     "    # Get the date\n",
-    "    date = fn.split('himax/2016/')[1].split('.tif')[0]\n",
+    "    date = fn.split('data/2016/')[1].split('.tif')[0]\n",
     "    \n",
     "    # open the array in c\n",
     "    arr_c = rasterio.open(fn).read(1)\n",
     "\n",
     "    # covert c to f, using np where so we keep the -9999 values\n",
-    "    arr_f = np.where(arr_c != -9999, C_to_F(arr_c), -9999) # this says, where arr_c does not equal -9999, covert data from c to f, but everwhere else write -9999\n",
+    "    arr_c = np.where(arr_c != -9999, C_to_F(arr_c), -9999) # this says, where arr_c does not equal -9999, covert data from c to f, but everwhere else write -9999\n",
     "    \n",
     "    # get the daily global average maximum heat index \n",
-    "    land_f = arr_f[arr_f != -9999] # drop all ocean -9999 values\n",
-    "    avg_f = land_f.mean()\n",
+    "    land_c = arr_c[arr_c != -9999] # drop all ocean -9999 values\n",
+    "    avg_c = land_c.mean()\n",
     "    \n",
     "    # print('On', date, 'the global average heat index was', round(avg, 2), '°F \\n')\n",
-    "    print(date, avg_c, avg_f)"
+    "    print(date, avg_c)"
    ]
   },
   {
@@ -376,7 +364,7 @@
     "    # print(multiprocessing.current_process())  # for now, we'll leave this commented out\n",
     "    \n",
     "    # Get the date\n",
-    "    date = fn.split('himax/2016/')[1].split('.tif')[0]\n",
+    "    date = fn.split('data/2016/')[1].split('.tif')[0]\n",
     "\n",
     "\n",
     "    # Conver the data from c to f 10 times to slow everything down   \n",
@@ -687,7 +675,7 @@
    "outputs": [],
    "source": [
     "# Get the path to your files in a list files\n",
-    "path = os.path.join('/home/t61d992/grp-ct/data/raw/climate/CHC_CMIP6/Observation/himax/2016/')\n",
+    "path = os.path.join('/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day8/data/2016/')\n",
     "fns = sorted(glob.glob(path + '*.tif'))\n",
     "\n",
     "# print first five files to make sure they are in order\n",
@@ -705,7 +693,7 @@
     "\n",
     "The code below will not load the files into memory, but it will create a DataSet on which we can look at what the data would be if it were loaded into memory, set up a set of instructions, and then tell `Dask` to run the instructions in parallel.\n",
     "\n",
-    "Like `python multiprocessing`, you first have to tell `Dask` to tee up 8 CPUS. If you run this on your on machine, `Dask` creates a URL where you can watch your workers work. More on this later."
+    "Like python `multiprocessing`, you first have to tell `Dask` to tee up 8 CPUS. If you run this on your on machine, `Dask` creates a URL where you can watch your workers work. More on this later."
    ]
   },
   {
