fully updated through 008

--- a/lectures/006_pandas.ipynb
+++ b/lectures/006_pandas.ipynb
@@ -288,7 +288,7 @@
     " \n",
     "[DHS](https://dhsprogram.com/) are nationally-representative household surveys that provide data for a wide range of monitoring and impact evaluation indicators in the areas of population, health, and nutrition. The DHS Program has earned a worldwide reputation for collecting and disseminating accurate, nationally representative data on topics such as fertility, family planning, maternal and child health, gender, HIV/AIDS, malaria, nutrition, and environmental health. Health information is collected through interviews with women and men, as well as collection of biological samples to test for malaria, vitamin deficiencies, and many other health conditions.\n",
     "\n",
-    "The CSV file is located in the `Day2/data` folder.\n",
+    "The CSV file is located in the `../data/` folder.\n",
     "\n",
     "The columns of this table are shown below:\n",
     "\n",
@@ -318,7 +318,7 @@
     "\n",
     "<div class=\"example\">\n",
     "    ✏️ <b> Try it. </b> \n",
-    "    Copy and paste the code above to import the data in the CSV file into a pandas <code>DataFrame</code> named <code>bsrn</code>.\n",
+    "    Copy and paste the code above to import the data in the CSV file into a pandas <code>DataFrame</code> named <code>dhs</code>.\n",
     "</div>"
    ]
   },
@@ -330,8 +330,8 @@
    },
    "outputs": [],
    "source": [
-    "dhs = pd.read_csv('./data/Ghana-2014-DHS-Household-Filtered.csv')  \n",
-    "# './' refers to the current directory where the notebook file is running\n",
+    "dhs = pd.read_csv('../data/Ghana-2014-DHS-Household-Filtered.csv')  \n",
+    "# './' refers to the current directory where the notebook file is running, whereas '../' is up one directory.\n",
     "\n",
     "dhs"
    ]
@@ -909,7 +909,7 @@
    "outputs": [],
    "source": [
     "# Interpolate using linear method\n",
-    "df_interpolated = dhs[['stunting', 'wasting', 'haz_new',\t'waz_new','bmi_adult']].interpolate(method='linear')\n",
+    "df_interpolated = dhs[['stunting', 'wasting', 'haz_new', 'waz_new','bmi_adult']].interpolate(method='linear')\n",
     "\n",
     "df_interpolated"
    ]
@@ -974,7 +974,7 @@
    "outputs": [],
    "source": [
     "# Specify start and end, monthly frequency\n",
-    "pd.date_range('1/1/2023','12/31/2023', freq='ME')"
+    "pd.date_range('1/1/2023','12/31/2023', freq='M')"
    ]
   },
   {
@@ -1820,7 +1820,7 @@
     "Let's take the example of the `cities` DataFrame we created in the last example. Now that we've compiled GPS coordinates of various cities, let's say we wanted to load these data into a GIS software application. We could export this DataFrame using `df.to_csv()` specifying the file name with the full file path as follows:\n",
     "\n",
     "```python\n",
-    "cities.to_csv('./exports/cities.csv')\n",
+    "cities.to_csv('./cities.csv')\n",
     "```\n"
    ]
   },
@@ -1870,10 +1870,10 @@
     "import os\n",
     "\n",
     "# Path to the base directory of this workshop folder - you can modify it based on your file location\n",
-    "base_dir = 'path to your base folder'\n",
+    "base_dir = 'path/to/your/base/folder'\n",
     "\n",
     "# relative location path file within the base directory\n",
-    "filename = 'Day2/data/DhsPrevalenceWCovar.csv'\n",
+    "filename = '../data/DhsPrevalenceWCovar.csv'\n",
     "\n",
     "full_path = os.path.join(base_dir, filename)\n",
     "\n",
