--- a/labs/GPHY-491-591-Lab2.ipynb
+++ b/labs/GPHY-491-591-Lab2.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "# Let's import our packages\n",
-    "![import](assets/import.png)"
+    "![import](../lectures/assets/import.png)"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "# we write file paths and names as their own variables for easy editing\n",
-    "fn = os.path.join('./data/DhsPrevalenceWCovar.csv')\n",
+    "fn = os.path.join('../data/DhsPrevalenceWCovar.csv')\n",
     "type(fn) # see that our fn is a string, but the os.path.join also helps Python know it's a file path"
    ]
   },
@@ -157,7 +157,7 @@
    "source": [
     "# How many surveys were conducted in Senegal?\n",
     "geog = 'Senegal'\n",
-    "df_ = df[df['country'] == geog]\n",
+    "df_senegal = df[df['country'] == geog]\n",
     "len(df_)"
    ]
   },
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Another way to do this, is using the built-in methods to a pandas data frame 'sort_values'\n",
-    "df_.sort_values('waste_urban', ascending = True)"
+    "df_senegal.sort_values('waste_urban', ascending = True)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# You can look at all the available functions using the key word 'dir'\n",
-    "dir(df_)"
+    "dir(df_senegal)"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "source": [
     "# You can use 'help' to understand objects, methods, functions, etc.\n",
     "# Parameters (also called 'arguments') are the objects you pass to a function before you 'call it'\n",
-    "help(df_.sort_values)"
+    "help(df_senegal.sort_values)"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "# You can also summerize each column easily\n",
-    "df_.describe()"
+    "df_senegal.describe()"
    ]
   },
   {
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here. (note: you should us the df object, not df_)"
+    "# Code here. "
    ]
   },
   {
@@ -406,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a scatter plot of the relationship between GPD PPP and All Stunting"
+    "# Make a scatter plot of the relationship between log10 of GPD PPP and All Wasting"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a scatter plot of the relationship between GPD PPP and Urban Stunting"
+    "# Make a scatter plot of the relationship between log10 of GPD PPP and Urban Wasting\n"
    ]
   },
   {
@@ -426,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a scatter plot of the relationship between GPD PPP and Rural Stunting"
+    "# Make a scatter plot of the relationship between log10 of GPD PPP and Rural Wasting\n"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a scatter plot of the relationship between GPD PPP with both Urban and Rural Stunting plotted \n",
+    "# Make a scatter plot of the relationship between GPD PPP with both Urban and Rural Wasting plotted \n",
     "# on the same plot"
    ]
   },
@@ -522,7 +522,24 @@
    "id": "710eac53",
    "metadata": {},
    "source": [
-    "### Question 1: Which variables are most highly correlated: GPD PPP, UrbanPop, AgLabor, All Stunting, Rural Stunting, and Urban Stunting? Provide evidence to support your conclusions."
+    "### Question 1: Which variables are most highly correlated: GPD PPP, UrbanPop, AgLabor, All Stunting, Rural Stunting, and Urban Stunting? Provide evidence (e.g. data analysis and/or plots) to support your conclusions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79546a17-aa20-4c3c-9c78-a82b074b22a2",
+   "metadata": {},
+   "source": [
+    "Answer 1: <br>\n",
+    "xyz ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "464e715a-d8dd-4fba-abfe-f038a2c8e9b3",
+   "metadata": {},
+   "source": [
+    "### Question 2: Which countries and which years had the worst stunting and the worst wasting? Provide evidence (e.g. data analysis and/or plots) to support your conclusions."
    ]
   },
   {
@@ -530,7 +547,7 @@
    "id": "4d96bd6c",
    "metadata": {},
    "source": [
-    "Answer 1: <br>\n",
+    "Answer 2: <br>\n",
     "xyz ..."
    ]
   }
@@ -551,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
