--- a/lectures/007_matplotlib.ipynb
+++ b/lectures/007_matplotlib.ipynb
@@ -972,7 +972,7 @@
    "outputs": [],
    "source": [
     "# Import data\n",
-    "bsrn = pd.read_csv('./data/BSRN_GOB_2019-10.csv',index_col=0,parse_dates=True)"
+    "bsrn = pd.read_csv('../data/BSRN_GOB_2019-10.csv',index_col=0,parse_dates=True)"
    ]
   },
   {
@@ -1078,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
