--- a/lectures/006_pandas.ipynb
+++ b/lectures/006_pandas.ipynb
@@ -212,10 +212,6 @@
    },
    "outputs": [],
    "source": [
-    "#df = pd.DataFrame([[25.8, 29.4, 25.6, 54.6],\n",
-    "#                   [34.5, 78.2, 86.2, 99.0],\n",
-    "#                   [12.4, 75.4, 23.6, 88.5]],columns=['A', 'B', 'C', 'D'])\n",
-    "\n",
     "df = pd.DataFrame({\n",
     "    'A':[25.8, 34.5, 12.4],\n",
     "    'B':[29.4, 78.2, 75.4],\n",
@@ -532,7 +528,7 @@
    "outputs": [],
    "source": [
     "# try to loacte to the last 6th column and last 3rd row\n",
-    "dhs[-6,-3]"
+    "# dhs[-6,-3]"
    ]
   },
   {
@@ -1186,7 +1182,7 @@
    "outputs": [],
    "source": [
     "# try to run the following code\n",
-    "dhs.median()"
+    "# dhs.median()"
    ]
   },
   {
@@ -2028,7 +2024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
