--- a/lectures/008_geopandas.ipynb
+++ b/lectures/008_geopandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Session 2-4: Introduction to Geopandas 🛰️🌍\n",
+    "# Interactive Session: Introduction to Geopandas 🛰️🌍\n",
     "\n",
     "![ntl](./assets/ntl.jpg)\n",
     "\n",
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "# First let's load the Ghana survey dataset\n",
-    "df = pd.read_csv('./data/Ghana-2014-DHS-Household-Filtered.csv')\n",
+    "df = pd.read_csv('../data/Ghana-2014-DHS-Household-Filtered.csv')\n",
     "\n",
     "# Identify records where both longitude and latitude are 0\n",
     "index_to_drop = df[(df['long'] == 0) & (df['lat'] == 0)].index\n",
@@ -362,20 +362,10 @@
     "base_dir = './'\n",
     "\n",
     "# Filename relative to the base directory\n",
-    "filename = 'data/ne_10m_admin_0_countries/ne_10m_admin_0_countries.shp' \n",
+    "filename = '../data/ne_10m_admin_0_countries/ne_10m_admin_0_countries.shp' \n",
     "\n",
     "# Joining paths to get the full path to the file\n",
     "fn = os.path.join(base_dir, filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = gpd.read_file(fn)\n",
-    "gdf.head()"
    ]
   },
   {
@@ -499,7 +489,8 @@
    "source": [
     "# you can also just use ax = gdf.plot() for simple quick visualization \n",
     "# but to have more subtle control, we can use matplotlib function to adjust the plot\n",
-    "ax = gdf.plot(column = 'GDP_percapita', legend = True)"
+    "\n",
+    "gdf.plot(column = 'GDP_percapita', legend = True)"
    ]
   },
   {
@@ -576,7 +567,7 @@
    },
    "outputs": [],
    "source": [
-    "fn = os.path.join(base_dir, 'data/DhsPrevalenceWCovar.csv')\n",
+    "fn = os.path.join(base_dir, '../data/DhsPrevalenceWCovar.csv')\n",
     "df = pd.read_csv(fn)\n",
     "df.head()"
    ]
@@ -807,7 +798,8 @@
    "outputs": [],
    "source": [
     "# Let's plot the data\n",
-    "gdf_sub.plot()"
+    "gdf_sub.plot()\n",
+    "plt.show()"
    ]
   },
   {
@@ -828,7 +820,8 @@
    },
    "outputs": [],
    "source": [
-    "gdf_sub.to_crs('esri:54009').plot()"
+    "gdf_sub.to_crs('esri:54009').plot()\n",
+    "plt.show()"
    ]
   },
   {
@@ -870,7 +863,7 @@
    "outputs": [],
    "source": [
     "# Create a File Name\n",
-    "fn = os.path.join(base_dir, 'Day2/data/new_dhs_data.shp')"
+    "fn = os.path.join(base_dir, '../data/new_dhs_data.shp')"
    ]
   },
   {
@@ -887,7 +880,7 @@
    "outputs": [],
    "source": [
     "# Export the updated geopandas as a esri shapefile \n",
-    "# gdf_m.to_file(fn, driver='ESRI Shapefile')"
+    "gdf_m.to_file(fn, driver='ESRI Shapefile')"
    ]
   }
  ],
@@ -907,7 +900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
