--- a/labs/GPHY-491-591-Lab4.ipynb
+++ b/labs/GPHY-491-591-Lab4.ipynb
@@ -6,9 +6,10 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# GPHY 491-591: Lab 3\n",
+    "# GPHY 491-591: Lab 4\n",
     "\n",
     "Written by Cascade Tuholske, Jan. 2024\n",
+    "Updated Oct. 2024\n",
     "\n",
     "![Richmond](./assets/richmond.png)\n",
     "\n",
