--- a/lectures/012_hazards_new.ipynb
+++ b/lectures/012_hazards_new.ipynb
@@ -79,6 +79,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eabbe25-25d0-43ca-89cd-aa10da355818",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fake"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "74ba4c2b-ab90-4336-ae54-2ef5f87bbbf0",
    "metadata": {},
